# portal-ai

./: .gitignore  ENHANCED_OPTIMIZER_SUMMARY.md  INTELLIGENT_OPTIMIZER_GUIDE.md  MULTIMODAL_MEMORY_GUIDE.md  Makefile  PERFORMANCE_OPTIMIZATION_REPORT.md  PRESUMPTUOUS_FIXES.md  README.md  agent_collaboration.py  analytics.jsonl  api_routes.py  comprehensive_context_tests.py  comprehensive_metrics.jsonl  culture_adapter.py  debug_context_analysis.py  debug_optimizer.py  emotion_processor.py  enhanced_optimizer_test_output.txt  intelligent_optimizer_test_output.txt  logs.py  main.py  memory.py  memory_image.jsonl  models.py  multimodal_demo.py  multimodal_embeddings.py  outcome_scorer.py  permission_manager.py  pipeline_manager.py  prompt_optimizer.py  pyproject.toml  pyrightconfig.json  quick_test.py  requirements.txt  routes.py  run_tests.sh  self_healing_router.py  semantic_rewriter.py  services.py  start.sh  (+24 more)
classifier/: intent_classifier.py
templates/: dashboard.html  gallery.html  index.html  index_new.html
