[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.57.1",
    "classifier>=2.0",
    "deep-translator>=1.11.4",
    "flask>=3.1.1",
    "langdetect>=1.0.9",
    "openai>=1.93.0",
    "requests>=2.32.4",
]
